--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Mini L-CTF</title>
-    <link rel="stylesheet" href="/static/css/main.css">
-    <link rel="shortcut icon" href="/static/images/logo-mini.png" />
+    <link rel="stylesheet" href="/front/static/css/main.css">
+    <link rel="shortcut icon" href="/front/static/images/logo-mini.png" />
   </head>
   <body>
     <div id="app"></div>
